Sidebar-Collapsed-Implemented :)

--- a/src/app/auth/features/auth-log-in/auth-log-in.component.html
+++ b/src/app/auth/features/auth-log-in/auth-log-in.component.html
@@ -17,7 +17,7 @@
                         <label for="email" class="block mb-2 text-sm font-medium text-slate-700">Your
                             email</label>
                         <input type="email" name="email" id="email"
-                            class="bg-white border border-slate-300 rounded-md text-gray-900 rounded-lg focus:ring-emerald-600 focus:border-emerald-600 block w-full p-2.5 placeholder-gray-400"
+                            class="bg-white border border-slate-300 rounded-md text-gray-900 rounded-lg block w-full p-2.5 placeholder-gray-400"
                             placeholder="user@email.com" required="" formControlName="email">
 
                     </div>
