--- a/src/app/notes/features/note-list/note-list.component.html
+++ b/src/app/notes/features/note-list/note-list.component.html
@@ -1,10 +1,6 @@
 <!-- Icons -->
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0" />
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0" />
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0" />
-
 <!-- Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,17 +8,16 @@
 
 <section class="absolute inset-0 -z-10 h-full w-full bg-gray-200 bg-[radial-gradient(#B8B8B8_1px,transparent_1px)] [background-size:16px_16px]">
 
-    <aside id="sidebar" class="fixed w-3xs min-h-full bg-white">
+    <aside id="sidebar" class="fixed w-[240px] min-h-[100vh] bg-white transition-all duration-300 overflow-hidden ease-in-out">
 
         <!-- Sidebar-Header -->
-        <header id="sidebar-header" class=" relative box-border fixed items-center justify-between px-2 py-8
-        ">
+        <header id="sidebar-header" class="relative box-border fixed items-center justify-between px-[15px] py-[20px] pb-12">
             <a routerLink="/" id="header-logo" class="">
-                <img class="h-10 w-15 block object-contain rounded-md " src="https://raw.githubusercontent.com/SexAtTheTerminal/mis-imagenes/refs/heads/main/swsLogo.svg" alt="headerlogo">
+                <img class="h-[46px] w-[46px] block object-contain rounded-[50%]" src="https://raw.githubusercontent.com/SexAtTheTerminal/mis-imagenes/refs/heads/main/swsLogo.svg" alt="headerlogo">
             </a>
 
-            <button id="sidebar-toggler" class="absolute px-20">
-                <span class ="material-symbols-rounded bg-gray-200">arrow_menu_open</span>
+            <button id="sidebar-toggler" (click)="toggleSidebar()" class="absolute top-[73px] right-[15px] h-[35px] w-[35px] flex items-center justify-center cursor-pointer rounded-[8px] bg-gray-200 hover:bg-gray-300 focus:outline-2 focus:outline-offset-2 focus:outline-gray-300 active:bg-gray-500 transition duration-400 ease-in-out">
+                <span class ="material-symbols-rounded text-[1.75rem]">arrow_menu_close</span>
             </button>
         </header>
 
@@ -30,130 +25,42 @@
         <nav id="sidebar-nav" class="">
 
             <!-- Primary top nav -->
-            <ul id="nav-list primary-nav" class="font-[Ubuntu] font-bold">
+            <ul id="nav-list primary-nav" class="flex flex-col list-none gap-[12px] px-[11px] py-[15px] font-[Ubuntu] font-bold">
                 <li id="nav-item" class="">
-                    <a routerLink="/" id="nav-link" class="text-indigo-500">
-                        <span class="material-symbols-rounded">home</span>
+                    <a routerLink="/" id="nav-link" class="h-[35px] flex gap-[12px] items-center text-indigo-500 rounded-[8px] hover:bg-gray-200 focus:outline-2 focus:outline-offset-2 transition duration-400 ease-in-out" 
+                    onclick="this.blur()">
+                        <span class="material-symbols-rounded pl-2">home</span>
                         <span id="nav-label">Inicio</span>
-                        </a>
+                    </a>
                 </li>
                 <li id="nav-item" class="">
-                    <a routerLink="/" id="nav-link" class="text-indigo-500">
-                        <span class="material-symbols-rounded">flatware</span>
+                    <a routerLink="/" id="nav-link" class="h-[35px] flex gap-[12px] items-center text-indigo-500 rounded-[8px] hover:bg-gray-200 focus:outline-2 focus:outline-offset-2 transition duration-400 ease-in-out" 
+                    onclick="this.blur()">
+                        <span class="material-symbols-rounded pl-2">flatware</span>
                         <span id="nav-label">Pedidos</span>
                     </a>
                 </li>
             </ul>
 
             <!-- Secondary Bottom nav -->
-            <ul id="nav-list secondary-nav" class="font-[Ubuntu] font-bold">
+            <ul id="nav-list secondary-nav" class="absolute bottom-[30px] w-[100%] flex flex-col list-none gap-[12px] px-[11px] py-[15px] font-[Ubuntu] font-bold ">
                 <li id="nav-item" class="">
-                    <a routerLink="/" id="nav-link" class="text-indigo-500">
-                        <span class="material-symbols-rounded">account_circle</span>
+                    <a routerLink="/" id="nav-link" class="h-[35px] flex gap-[12px] items-center text-indigo-500 rounded-[8px] hover:bg-gray-200 focus:outline-2 focus:outline-offset-2 transition duration-400 ease-in-out" 
+                    onclick="this.blur()">
+                        <span class="material-symbols-rounded pl-2">account_circle</span>
                         <span id="nav-label">Usuario</span>
                     </a>
                 </li>
                 <li id="nav-item" class="">
-                    <a (click)="logOut()" id="nav-link" class="text-indigo-500">
-                        <span class="material-symbols-rounded">logout</span>
+                    <a (click)="logOut()" id="nav-link" class="h-[35px] flex gap-[12px] items-center text-indigo-500 rounded-[8px] hover:bg-gray-200 focus:outline-2 focus:outline-offset-2 transition duration-400 ease-in-out" 
+                    onclick="this.blur()">
+                        <span class="material-symbols-rounded pl-2">logout</span>
                         <span id="nav-label">Log Out</span>
                     </a>
                 </li>
             </ul>
         </nav>
     </aside>
-    <!-- <aside id="default-sidebar"
-        class="fixed top-0 left-0 z-40 w-64 h-screen transition-transform -translate-x-full sm:translate-x-0"
-        aria-label="Sidebar">
-        <div class="h-full px-3 py-4 overflow-y-auto bg-gray-50 dark:bg-gray-800">
-            <ul class="space-y-2 font-medium">
-                <li>
-                    <a href="#"
-                        class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
-                        <svg class="w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
-                            aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 21">
-                            <path
-                                d="M16.975 11H10V4.025a1 1 0 0 0-1.066-.998 8.5 8.5 0 1 0 9.039 9.039.999.999 0 0 0-1-1.066h.002Z" />
-                            <path
-                                d="M12.5 0c-.157 0-.311.01-.565.027A1 1 0 0 0 11 1.02V10h8.975a1 1 0 0 0 1-.935c.013-.188.028-.374.028-.565A8.51 8.51 0 0 0 12.5 0Z" />
-                        </svg>
-                        <span class="ms-3">Dashboard</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#"
-                        class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
-                        <svg class="shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
-                            aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 18">
-                            <path
-                                d="M6.143 0H1.857A1.857 1.857 0 0 0 0 1.857v4.286C0 7.169.831 8 1.857 8h4.286A1.857 1.857 0 0 0 8 6.143V1.857A1.857 1.857 0 0 0 6.143 0Zm10 0h-4.286A1.857 1.857 0 0 0 10 1.857v4.286C10 7.169 10.831 8 11.857 8h4.286A1.857 1.857 0 0 0 18 6.143V1.857A1.857 1.857 0 0 0 16.143 0Zm-10 10H1.857A1.857 1.857 0 0 0 0 11.857v4.286C0 17.169.831 18 1.857 18h4.286A1.857 1.857 0 0 0 8 16.143v-4.286A1.857 1.857 0 0 0 6.143 10Zm10 0h-4.286A1.857 1.857 0 0 0 10 11.857v4.286c0 1.026.831 1.857 1.857 1.857h4.286A1.857 1.857 0 0 0 18 16.143v-4.286A1.857 1.857 0 0 0 16.143 10Z" />
-                        </svg>
-                        <span class="flex-1 ms-3 whitespace-nowrap">Kanban</span>
-                        <span
-                            class="inline-flex items-center justify-center px-2 ms-3 text-sm font-medium text-gray-800 bg-gray-100 rounded-full dark:bg-gray-700 dark:text-gray-300">Pro</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#"
-                        class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
-                        <svg class="shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
-                            aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
-                            <path
-                                d="m17.418 3.623-.018-.008a6.713 6.713 0 0 0-2.4-.569V2h1a1 1 0 1 0 0-2h-2a1 1 0 0 0-1 1v2H9.89A6.977 6.977 0 0 1 12 8v5h-2V8A5 5 0 1 0 0 8v6a1 1 0 0 0 1 1h8v4a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-4h6a1 1 0 0 0 1-1V8a5 5 0 0 0-2.582-4.377ZM6 12H4a1 1 0 0 1 0-2h2a1 1 0 0 1 0 2Z" />
-                        </svg>
-                        <span class="flex-1 ms-3 whitespace-nowrap">Inbox</span>
-                        <span
-                            class="inline-flex items-center justify-center w-3 h-3 p-3 ms-3 text-sm font-medium text-blue-800 bg-blue-100 rounded-full dark:bg-blue-900 dark:text-blue-300">3</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#"
-                        class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
-                        <svg class="shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
-                            aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 18">
-                            <path
-                                d="M14 2a3.963 3.963 0 0 0-1.4.267 6.439 6.439 0 0 1-1.331 6.638A4 4 0 1 0 14 2Zm1 9h-1.264A6.957 6.957 0 0 1 15 15v2a2.97 2.97 0 0 1-.184 1H19a1 1 0 0 0 1-1v-1a5.006 5.006 0 0 0-5-5ZM6.5 9a4.5 4.5 0 1 0 0-9 4.5 4.5 0 0 0 0 9ZM8 10H5a5.006 5.006 0 0 0-5 5v2a1 1 0 0 0 1 1h11a1 1 0 0 0 1-1v-2a5.006 5.006 0 0 0-5-5Z" />
-                        </svg>
-                        <span class="flex-1 ms-3 whitespace-nowrap">Users</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#"
-                        class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
-                        <svg class="shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
-                            aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 20">
-                            <path
-                                d="M17 5.923A1 1 0 0 0 16 5h-3V4a4 4 0 1 0-8 0v1H2a1 1 0 0 0-1 .923L.086 17.846A2 2 0 0 0 2.08 20h13.84a2 2 0 0 0 1.994-2.153L17 5.923ZM7 9a1 1 0 0 1-2 0V7h2v2Zm0-5a2 2 0 1 1 4 0v1H7V4Zm6 5a1 1 0 1 1-2 0V7h2v2Z" />
-                        </svg>
-                        <span class="flex-1 ms-3 whitespace-nowrap">Products</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#"
-                        class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
-                        <svg class="shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
-                            aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 18 16">
-                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M1 8h11m0 0L8 4m4 4-4 4m4-11h3a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-3" />
-                        </svg>
-                        <span class="flex-1 ms-3 whitespace-nowrap">Sign In</span> </a>
-                </li>
-                <li>
-                    <a (click)="logOut()"
-                        class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 22 24" stroke-width="2"
-                            stroke="currentColor"
-                            class="text-gray-500 w-6 h-6 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white">
-                            <path stroke-linecap="round" stroke-linejoin="round"
-                                d="M15.75 9V5.25A2.25 2.25 0 0013.5 3h-6A2.25 2.25 0 005.25 5.25v13.5A2.25 2.25 0 007.5 21h6a2.25 2.25 0 002.25-2.25V15m3-3H9m0 0l3-3m-3 3l3 3" />
-                        </svg>
-                        <span class="flex-1 ms-2 whitespace-nowrap">Log Out</span>
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </aside> -->
-    
     <section class="max-w-screen-xl mx-auto">
         <div class="sm:ml-64 relative overflow-x-auto shadow-md sm:rounded-lg pt-10">
             <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
@@ -214,3 +121,9 @@
         </div>
     </section>
 </section>
+
+<script>
+    document.querySelector("#sidebar-toggler")?.addEventListener("click", () => {
+        document.querySelector("#sidebar")?.classList.toggle("collapsed");
+    });
+</script>
