--- a/src/app/sidebar/features/sidebar-casher/sidebar-casher.component.html
+++ b/src/app/sidebar/features/sidebar-casher/sidebar-casher.component.html
@@ -25,7 +25,7 @@
     id="sidebar-header"
     class="relative box-border fixed items-center justify-between px-[15px] py-[20px] pb-12"
   >
-    <a routerLink="/" id="header-logo" class="">
+    <a routerLink="/cashier" id="header-logo" class="">
       <img
         class="h-[46px] w-[46px] block object-contain rounded-[50%]"
         src="https://raw.githubusercontent.com/SexAtTheTerminal/mis-imagenes/refs/heads/main/swsLogo.svg"
@@ -53,7 +53,7 @@
     >
       <li id="nav-item" class="">
         <a
-          routerLink="/"
+          routerLink="/cashier"
           class="nav-link h-[35px] flex gap-[12px] items-center text-indigo-500 rounded-[8px] hover:bg-gray-200 focus:outline-2 focus:outline-offset-2 transition duration-400 ease-in-out"
           onclick="this.blur()"
         >
