--- a/src/app/sidebar/features/sidebar-casher/sidebar-casher.component.scss
+++ b/src/app/sidebar/features/sidebar-casher/sidebar-casher.component.scss
@@ -12,7 +12,7 @@
 
   .collapsed .nav-link {
     justify-content: start;
-    padding-left: 10px;
+    padding-left: 9px;
     border: 2px solid rgba(209, 201, 201, 0.548);
   }
 
@@ -22,25 +22,10 @@
     transition: opacity 0.3s ease;
   }
 
-  .collapsed #nav-link_dropdown-link {
-    justify-content: start;
-    padding-left: 10px;
-    border: 2px solid rgba(209, 201, 201, 0.548);
-  }
-
-  .collapsed #nav-link_dropdown-toggle {
-    justify-content: start;
-    padding-left: 10px;
-    border: 2px solid rgba(209, 201, 201, 0.548);
-  }
-
   .collapsed #dropdown-menu {
-    position: absolute;
-    left: 100%;
-    top: -10px;
-    background: white;
-    padding: 7px 10px 7px 24px;
-    border-radius: 0 10px 10px 0;
+    display: none;
+    opacity: 0;
+    transition: opacity 0.3s ease;
   }
 
   #nav-item {
